tests/algorithms/x/C/searches/median_of_medians.error
compile: exit status 1
/workspace/mochi/tests/algorithms/x/C/searches/median_of_medians.c: In function ‘set_at_int’:
/workspace/mochi/tests/algorithms/x/C/searches/median_of_medians.c:91:19: warning: implicit declaration of function ‘list_append_int_new’; did you mean ‘list_append_long_long’? [-Wimplicit-function-declaration]
   91 |             res = list_append_int_new(res, res_len, value);
      |                   ^~~~~~~~~~~~~~~~~~~
      |                   list_append_long_long
/workspace/mochi/tests/algorithms/x/C/searches/median_of_medians.c:91:17: warning: assignment to ‘long long int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   91 |             res = list_append_int_new(res, res_len, value);
      |                 ^
/usr/bin/ld: /tmp/ccPLZ1MP.o: in function `set_at_int':
median_of_medians.c:(.text+0x3fc): undefined reference to `list_append_int_new'
collect2: error: ld returned 1 exit status
