tests/algorithms/x/C/searches/median_of_medians.c
// Generated by Mochi 0.10.32 on 2025-08-23 21:18 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t set_at_int_len;
size_t sort_int_len;

size_t _slice_int_len;
size_t append_len;
static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* _slice_int(const long long *arr, size_t len, int start, int end, size_t *out_len) {
    if (start < 0) start = 0;
    if ((size_t)end > len) end = len;
    if (start > end) start = end;
    size_t n = end - start;
    long long *res = NULL;
    if (n) {
        res = malloc(n * sizeof(long long));
        memcpy(res, arr + start, n * sizeof(long long));
    }
    *out_len = n;
    _slice_int_len = n;
    return res;
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long * set_at_int(long long * xs, size_t xs_len, long long idx, long long value);
long long * sort_int(long long * xs, size_t xs_len);
long long median_of_five(long long * arr, size_t arr_len);
long long median_of_medians(long long * arr, size_t arr_len);
long long quick_select(long long * arr, size_t arr_len, long long target);
void user_main();
int main(void);

long long * set_at_int(long long * xs, size_t xs_len, long long idx, long long value) {
    long long i = 0LL;
    long long *res = NULL;
    size_t res_len = 0;
    while (i < xs_len) {
        if (i == idx) {
            res = list_append_int_new(res, res_len, value);
            res_len++;
        } else {
            res = list_append_long_long(res, &res_len, xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]);
        }
        i = i + 1LL;
    }
    return set_at_int_len = res_len, res;
}

long long * sort_int(long long * xs, size_t xs_len) {
    long long *res = xs;
    size_t res_len = xs_len;
    long long i = 1LL;
    while (i < res_len) {
        long long key = res[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? res_len + _mochi_idx : _mochi_idx;})];
        long long j = i - 1LL;
        while ((j >= 0LL) && (res[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? res_len + _mochi_idx : _mochi_idx;})] > key)) {
            res = set_at_int(res, res_len, j + 1LL, res[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? res_len + _mochi_idx : _mochi_idx;})]);
            res_len = set_at_int_len;
            j = j - 1LL;
        }
        res = set_at_int(res, res_len, j + 1LL, key);
        res_len = set_at_int_len;
        i = i + 1LL;
    }
    return sort_int_len = res_len, res;
}

long long median_of_five(long long * arr, size_t arr_len) {
    long long *sorted = sort_int(arr, arr_len);
    size_t sorted_len = sort_int_len;
    return sorted[(int)({long long _mochi_idx = sorted_len / 2LL; _mochi_idx < 0 ? sorted_len + _mochi_idx : _mochi_idx;})];
}

long long median_of_medians(long long * arr, size_t arr_len) {
    if (arr_len <= 5LL) {
        return median_of_five(arr, arr_len);
    }
    long long *medians = NULL;
    size_t medians_len = 0;
    long long i = 0LL;
    while (i < arr_len) {
        if ((i + 5LL) <= arr_len) {
            medians = list_append_long_long(medians, &medians_len, ({long long* __tmp2 = _slice_int(arr, arr_len, i, i + 5LL, &(_slice_int_len)); size_t __tmp2_len = _slice_int_len; median_of_five(__tmp2, __tmp2_len);}));
        } else {
            medians = list_append_long_long(medians, &medians_len, ({long long* __tmp3 = _slice_int(arr, arr_len, i, arr_len, &(_slice_int_len)); size_t __tmp3_len = _slice_int_len; median_of_five(__tmp3, __tmp3_len);}));
        }
        i = i + 5LL;
    }
    return median_of_medians(medians, medians_len);
}

long long quick_select(long long * arr, size_t arr_len, long long target) {
    if (target > arr_len) {
        return -1.0;
    }
    long long x = median_of_medians(arr, arr_len);
    long long *left = NULL;
    size_t left_len = 0;
    long long *right = NULL;
    size_t right_len = 0;
    long long check = 0LL;
    long long i = 0LL;
    while (i < arr_len) {
        if (arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})] < x) {
            left = list_append_long_long(left, &left_len, arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})]);
        } else {
            if (arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})] > x) {
                right = list_append_long_long(right, &right_len, arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})]);
            } else {
                if (arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})] == x) {
                    if (!(check)) {
                        check = 1LL;
                    } else {
                        right = list_append_long_long(right, &right_len, arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})]);
                    }
                } else {
                    right = list_append_long_long(right, &right_len, arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})]);
                }
            }
        }
        i = i + 1LL;
    }
    long long rank_x = left_len + 1LL;
    long long answer = 0LL;
    if (rank_x == target) {
        answer = x;
    } else {
        if (rank_x > target) {
            answer = quick_select(left, left_len, target);
        } else {
            answer = quick_select(right, right_len, target - rank_x);
        }
    }
    return answer;
}

void user_main() {
    puts(str_int(median_of_five((long long[]){5LL, 4LL, 3LL, 2LL}, 4)));
    puts(str_int(quick_select((long long[]){2LL, 4LL, 5LL, 7LL, 899LL, 54LL, 32LL}, 7, 5LL)));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
